Blender crashes when renaming bone in Edit Mode, Saving, and than selecting/deselecting. #95356

Closed
opened 2022-01-31 13:36:44 +01:00 by Nanoek Knol · 8 comments
Member

System Information
Operating system: Linux-5.4.0-96-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: Mesa Intel(R) UHD Graphics (ICL GT1) Intel 4.6 (Core Profile) Mesa 21.0.3

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-01-29 04:40, hash: 90a23dec46
Worked: Blender 3.0.1

Caused by 0f89bcdbeb

Short description of error
Blender crashes when I rename a bone in Edit Mode, save the file, and then try to (box) select/deselect a (other) bone.

Exact steps for others to reproduce the error
Open the included .blend file. Rename the bone to something different. Save the file, drag to box select. Blender crashes.

BoneCrash.blend

**System Information** Operating system: Linux-5.4.0-96-generic-x86_64-with-glibc2.31 64 Bits Graphics card: Mesa Intel(R) UHD Graphics (ICL GT1) Intel 4.6 (Core Profile) Mesa 21.0.3 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-01-29 04:40, hash: `90a23dec46` Worked: Blender 3.0.1 Caused by 0f89bcdbeb **Short description of error** Blender crashes when I rename a bone in Edit Mode, save the file, and then try to (box) select/deselect a (other) bone. **Exact steps for others to reproduce the error** Open the included .blend file. Rename the bone to something different. Save the file, drag to box select. Blender crashes. [BoneCrash.blend](https://archive.blender.org/developer/F12837237/BoneCrash.blend)
Author
Member

Added subscriber: @Blendey

Added subscriber: @Blendey
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Caused by 0f89bcdbeb

CC @Sergey

Caused by 0f89bcdbeb CC @Sergey
Sergey Sharybin self-assigned this 2022-01-31 17:17:41 +01:00

This issue was referenced by 6f9828289f

This issue was referenced by 6f9828289f397228c6cab6f352fb4a84a65da22a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95356
No description provided.